title text align center fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ h1, h2, h3, h4, h5, h6  {
 
 @media (max-width:1036px) {
     
-    #title {
+    #title .container-fluid {
         text-align: center;
     }
 
